# S4Forge.RE

Decompilation/: CMakeLists.txt  PROGRESS.md  analyze_debug_reports.py  assign_unmapped_files.py  class_creator.py  folder_map_normalized.py  updated_folder_map.py
Decompilation/Code/: AdvXMLParser.cpp  AdvXMLParser.h  Attribute.cpp  Attribute.h  BB_SIV_ChunkHeader.cpp  BadClassID.cpp  BadClassID.h  Bookmark.cpp  CAIBuildingEnsignPositionIterator.cpp  CAI_Ecosector_Grid_Iterator.cpp  CAddOn.cpp  CAddSoldierSideBarInfo.cpp  CAddToolSideBarInfo.cpp  CAddToolSideBarInfo.h  CAddVehicleBarInfo.cpp  CAlliances.cpp  CAnimal.cpp  CAnimal.h  CAnimalEffect.cpp  CAnimalEffect.h  CAnimalMgr.cpp  CAnimalRanchRole.cpp  CAnyWherePileRole.cpp  CAreaList.cpp  CAttackMsgFilter.cpp  CAttackMsgList.cpp  CBBSStackTrace.cpp  CBBSStackTrace.h  CBBSupportTraceFile.cpp  CBBSupportTraceFile.h  CBBSupportTraceFilePtr.cpp  CBarrackRole.cpp  CBarracksInfo.cpp  CBasicGrid.cpp  CBasicGrid.h  CBigTempleRole.cpp  CBinkInterface.cpp  CBinkInterface.h  CBlitFX.cpp  CBlitFX.h  (+771 more)
Decompilation/Code/AI/: CAIChambers.cpp  CAIConfigInt.cpp  CAIConfigIntEx.cpp  CAIConfigIntEx.h  CAIDarkTribe.cpp  CAIDarkTribePlayerAI.cpp  CAIDarkTribeSectorAI.cpp  CAIDarkTribeSectorAI.h  CAIDefenceGoals.cpp  CAIEcoSectorAIEx.cpp  CAIEcoSpecialBuildingInfos.cpp  CAIEcoSpecialBuildingInfos.h  CAIEnemySettlerInSectorIterator.cpp  CAIEntityInfo.cpp  CAIEntityInfo.h  CAIEntityInfoEx.cpp  CAIEntityInfoTower.cpp  CAIEvent.cpp  CAIEventQueue.cpp  CAIEventQueue.h  CAIGoal.cpp  CAIGoalCache.cpp  (+49 more)
Decompilation/S4_Main/: main.cpp
(+225 files in other folders)
